# vsag-rs

./: .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: CI.yml  release.yml
include/: wrapper.h
src/: error.rs  ffi.rs  lib.rs  wrapper.cpp
